Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI429NET.VB

        Public Declare Function BTI429_IsRcvChan Lib "BTI42964.DLL" Alias "BTI429_IsRcvChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_IsXmtChan Lib "BTI42964.DLL" Alias "BTI429_IsXmtChan" (ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_LabelReverse Lib "BTI42964.DLL" Alias "BTI429_LabelReverse" (ByVal msgval As UInt32) As UInt32
        Public Declare Function BTI429_ListAddr Lib "BTI42964.DLL" Alias "BTI429_ListAddr" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListAddrEx Lib "BTI42964.DLL" Alias "BTI429_ListAddrEx" (ByVal index As Int32, ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListAdvance Lib "BTI42964.DLL" Alias "BTI429_ListAdvance" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListClear Lib "BTI42964.DLL" Alias "BTI429_ListClear" (ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListConfig Lib "BTI42964.DLL" Alias "BTI429_ListConfig" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListConfigEx Lib "BTI42964.DLL" Alias "BTI429_ListConfigEx" (ByVal configval As UInt32, ByVal count As Int32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListDataBlkRd Lib "BTI42964.DLL" Alias "BTI429_ListDataBlkRd" (ByVal dataptr As UInt32(), ByRef datacountptr As UInt16, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListDataBlkWr Lib "BTI42964.DLL" Alias "BTI429_ListDataBlkWr" (ByVal dataptr As UInt32(), ByVal datacount As UInt16, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListDataRdEx Lib "BTI42964.DLL" Alias "BTI429_ListDataRdEx" (ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_ListDataWrEx Lib "BTI42964.DLL" Alias "BTI429_ListDataWrEx" (ByVal value As UInt32, ByVal index As Int32, ByVal listaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_ListInit Lib "BTI42964.DLL" Alias "BTI429_ListInit" (ByVal listaddr As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ListNextRd Lib "BTI42964.DLL" Alias "BTI429_ListNextRd" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ListNextWr Lib "BTI42964.DLL" Alias "BTI429_ListNextWr" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr) As UInt32
        Public Declare Sub BTI429_ListPostRd Lib "BTI42964.DLL" Alias "BTI429_ListPostRd" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_ListPostWr Lib "BTI42964.DLL" Alias "BTI429_ListPostWr" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_ListPreRd Lib "BTI42964.DLL" Alias "BTI429_ListPreRd" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Sub BTI429_ListPreWr Lib "BTI42964.DLL" Alias "BTI429_ListPreWr" (ByVal listaddr As UInt32, ByRef header As UInt16, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgActivityRd Lib "BTI42964.DLL" Alias "BTI429_MsgActivityRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_MsgActivityWr Lib "BTI42964.DLL" Alias "BTI429_MsgActivityWr" (ByVal value As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgCheck Lib "BTI42964.DLL" Alias "BTI429_MsgCheck" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Function BTI429_MsgCommRd Lib "BTI42964.DLL" Alias "BTI429_MsgCommRd" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgCommWr Lib "BTI42964.DLL" Alias "BTI429_MsgCommWr" (ByRef msgfields As MSGFIELDS429, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_MsgConfig Lib "BTI42964.DLL" Alias "BTI429_MsgConfig" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgMultiSkipWr Lib "BTI42964.DLL" Alias "BTI429_MsgMultiSkipWr" (ByVal skip As Int32(), ByVal msgaddr As UInt32(), ByVal msgcount As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_MsgOptRd Lib "BTI42964.DLL" Alias "BTI429_MsgOptRd" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt16
        Public Declare Sub BTI429_MsgOptWr Lib "BTI42964.DLL" Alias "BTI429_MsgOptWr" (ByVal msgopt As UInt16, ByVal msgaddr As UInt32, ByVal handleval As IntPtr)
        Public Declare Function BTI429_MsgReset Lib "BTI42964.DLL" Alias "BTI429_MsgReset" (ByVal msgaddr As UInt32, ByVal handleval As IntPtr) As UInt32
        Public Declare Function BTI429_ParamWaveformConfig Lib "BTI42964.DLL" Alias "BTI429_ParamWaveformConfig" (ByVal configval As UInt32, ByVal highvolt As Int32, ByVal lowvolt As Int32, ByVal nullvolt As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_ParamWaveformConfigEx Lib "BTI42964.DLL" Alias "BTI429_ParamWaveformConfigEx" (ByVal configval As UInt32, ByRef paramflds As PARAMFIELDS429, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched1Build Lib "BTI42964.DLL" Alias "BTI429_Sched1Build" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiodin As Int32(), ByVal maxperiodin As Int32(), ByVal speed As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched2AdvanceMessage Lib "BTI42964.DLL" Alias "BTI429_Sched2AdvanceMessage" (ByVal entries As Int32, ByVal panicindex As Int32, ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched2AdvanceNoMessage Lib "BTI42964.DLL" Alias "BTI429_Sched2AdvanceNoMessage" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_Sched2Analyze Lib "BTI42964.DLL" Alias "BTI429_Sched2Analyze" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr)
        Public Declare Function BTI429_Sched2Build Lib "BTI42964.DLL" Alias "BTI429_Sched2Build" (ByVal nummsgs As Int32, ByVal msgaddrptr As UInt32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched2BuildEx Lib "BTI42964.DLL" Alias "BTI429_Sched2BuildEx" (ByRef styleptr As Int32, ByVal nummsgs As Int32, ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal interceptflag As Int32) As Int32
        Public Declare Function BTI429_Sched2BuildExx Lib "BTI42964.DLL" Alias "BTI429_Sched2BuildExx" (ByVal style As Int32, ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal nummsgs As Int32, ByVal minlist As Int32(), ByVal maxlist As Int32(), ByRef entriesptr As Int32, ByRef maxentriesptr As Int32, ByVal infoptr As IntPtr, ByVal msgaddrptr As UInt32(), ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched3Build Lib "BTI42964.DLL" Alias "BTI429_Sched3Build" (ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiod As Int32(), ByVal maxperiod As Int32(), ByVal speed As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched3BuildEx Lib "BTI42964.DLL" Alias "BTI429_Sched3BuildEx" (ByVal basevalmsgnum As Int32, ByVal nummsgs As Int32, ByVal msgaddr As UInt32(), ByVal minperiodin As Int32(), ByVal maxperiodin As Int32(), ByVal speed As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched3Calc Lib "BTI42964.DLL" Alias "BTI429_Sched3Calc" (ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_Sched3Check Lib "BTI42964.DLL" Alias "BTI429_Sched3Check" (ByRef minperiod As Int32, ByRef maxperiod As Int32, ByVal infoptr As IntPtr) As Int32
        Public Declare Function BTI429_Sched3ToBit Lib "BTI42964.DLL" Alias "BTI429_Sched3ToBit" (ByVal value As UInt32, ByVal infoptr As IntPtr) As UInt32
        Public Declare Function BTI429_Sched4AdvanceMessage Lib "BTI42964.DLL" Alias "BTI429_Sched4AdvanceMessage" (ByVal entries As Int32, ByVal panicindex As Int32, ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched4AdvanceNoMessage Lib "BTI42964.DLL" Alias "BTI429_Sched4AdvanceNoMessage" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr, ByRef nextdeltaptr As Int32, ByVal ulmastertimer As Int32, ByRef msgaddrptr As UInt32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Sub BTI429_Sched4Analyze Lib "BTI42964.DLL" Alias "BTI429_Sched4Analyze" (ByVal nummsgs As Int32, ByVal infoptr As IntPtr)
        Public Declare Function BTI429_Sched4Build Lib "BTI42964.DLL" Alias "BTI429_Sched4Build" (ByVal nummsgs As Int32, ByVal msgaddrptr As UInt32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
        Public Declare Function BTI429_Sched4BuildEx Lib "BTI42964.DLL" Alias "BTI429_Sched4BuildEx" (ByRef styleptr As Int32, ByVal nummsgs As Int32, ByVal minorframetime As Int32, ByVal majorframetime As Int32, ByVal targetlist As Int32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByVal speedflag As Int32, ByVal microflag As Int32, ByVal interceptflag As Int32) As Int32
        Public Declare Function BTI429_Sched4BuildExx Lib "BTI42964.DLL" Alias "BTI429_Sched4BuildExx" (ByVal style As Int32, ByVal speedflag As Int32, ByVal microflag As Int32, ByVal debugvalflag As Int32, ByVal tryflag As Int32, ByVal nummsgs As Int32, ByVal minorframetime As Int32, ByVal majorframetime As Int32, ByVal targetlist As Int32(), ByVal minlist As Int32(), ByVal maxlist As Int32(), ByRef entriesptr As Int32, ByRef maxentriesptr As Int32, ByVal infoptr As IntPtr, ByVal msgaddrptr As UInt32(), ByVal interceptflag As Int32, ByVal channum As Int32, ByVal handleval As IntPtr) As Int32
